--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -44,9 +44,9 @@
   <section id="side-nav">
     <article *ngIf="categoryFilter || tagFilter">
       <h2>Filter:</h2>
-      <div class="current-filter" (click)="clearFilters()">
+      <div class="current-filter">
         {{ categoryFilter?.name || tagFilter?.name }}
-        <i class="bi bi-trash"></i>
+        <i class="fa fa-trash-o" (click)="clearFilters()"  routerLink="/projects"></i>
       </div>
     </article>
     <article id="categories">
