--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -33,3 +33,26 @@
     </footer>
   </article>
 </section>
+<div class="nav-container">
+  <section id="side-nav">
+    <article *ngIf="categoryFilter || tagFilter">
+      <h2>Filter:</h2>
+      <div class="current-filter">
+        {{ categoryFilter?.name || tagFilter?.name }}
+        <i class="fa fa-trash-o" (click)="clearFilters()"  routerLink="/projects"></i>
+      </div>
+    </article>
+    <article id="categories">
+      <h3>Categories</h3>
+        <div *ngFor="let category of categories" [routerLink]="['/projects/categories', category.slug]" (click)="setCategoryFilter(category)">
+          {{ category.name }}
+        </div>
+    </article>
+    <article id="tags">
+      <h3>Tags</h3>
+        <div *ngFor="let tag of tags" [routerLink]="['/projects/tags', tag.slug]" (click)="setTagFilter(tag)">
+          {{ tag.name }}
+        </div>
+    </article>
+  </section>
+</div>
