--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,10 +1,40 @@
-#minifigs {
+#projects {
+  display: flex;
+  flex-wrap: wrap; /* Allow projects to wrap if they exceed the container width */
+  justify-content: flex-start; /* Start projects from the left side */
+}
+
+article {
+  width: calc(50% - 20px); /* Adjust the width of each project card */
+  margin: 10px; /* Add margin between project cards */
+}
+
+#side-nav {
+  position: fixed;
+  top: 30px;
+  right: 0;
+  text-align: right;
+  background-color: #eee;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 18rem;
+}
+
+
+
+/* Styles for the rest of your layout */
+main {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: flex-start;
+  min-width: 460px;
   width: 100%;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+#minifigs {
+  width: 100%;
 }
 
 .minifig-card {
@@ -14,7 +44,7 @@ img {
 }
 
 article {
-  width: 80%;
+  width: 60%;
   min-height: 10rem;
   min-width: 15rem;
   padding: 1rem;
@@ -23,32 +53,19 @@ article {
   justify-content: space-between;
   background-color: rgb(220, 219, 218);
   border-radius: 0.3rem 0.3rem 0 0;
+}
 
-  h2 {
-    margin: 0;
-  }
+footer {
+  font-size: 0.8rem;
+  padding-right: 1rem;
+  align-self: flex-end;
+}
 
-  footer {
-    align-self: flex-start;
-    margin-top: 1rem;
-    font-size: 0.8rem;
-    background-color: #eee;
-    width: 100%;
-    padding-right: 0;
-    span {
-      cursor: pointer;
-    }
-    div {
-      padding: 0.6rem;
-      justify-content: space-between;
-    }
-  }
-  a,
-  a:visited {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+a,
+a:visited {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .hidden {
@@ -61,9 +78,4 @@ article {
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 10px;
   justify-items: center;
-}
-footer {
-  font-size: 0.8rem;
-  padding-right: 1rem;
-  align-self: flex-end;
 }
