--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+* 
+{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: #333;
   background-color: #f5f5f5;
