--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
+
 <div class="home-body">
     <section class="home-section">
-        <img src="../../../assets/images/bg.jpg" alt="bg" id="bg">
+        <!-- <img src="../../../assets/images/bg.jpg" alt="bg" id="bg"> -->
         <img src="../../../assets/images/moon.png" alt="moon" id="moon">
         <img src="../../../assets/images/mountain.png" alt="mountain" id="mountain">
         <img src="../../../assets/images/road.png" alt="road" id="road">
