--- a/portfolio/src/app/app.component.scss
+++ b/portfolio/src/app/app.component.scss
@@ -36,3 +36,269 @@ footer {
   padding-right: 1rem;
   align-self: flex-end;
 }
+
+.home-body {
+  // background: #0a2a43;
+  background: #373c93;
+  min-height: 1500px;
+
+.home-section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // mix-blend-mode: luminosity;
+  img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      
+  }
+}
+}
+
+.home-section:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, #0a2a43, transparent);
+  z-index: 10000;
+}
+
+.home-section:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: #0a2a43;
+  z-index: 10000;
+  mix-blend-mode: color;
+
+}
+
+#text {
+  position: relative;
+  color: transparent;
+  font-size: 10em;
+  z-index: 1;
+  span {
+      animation: animate 4s linear forwards;
+
+  }
+  span:nth-child(1) {
+      animation-delay: 0s;
+  }
+  span:nth-child(2) {
+      animation-delay: 0.1s;
+  }
+  span:nth-child(3) {
+      animation-delay: 0.2s;
+  }
+  span:nth-child(4) {
+      animation-delay: 0.3s;
+  }
+  span:nth-child(5) {
+      animation-delay: 0.4s;
+  }
+  span:nth-child(6) {
+      animation-delay: 0.5s;
+  }
+  span:nth-child(7) {
+      animation-delay: 0.6s;
+  }
+
+}
+
+#road {
+  z-index: 2;
+}
+
+@keyframes animate {
+  0% {
+      color: transparent; /* Initially transparent */
+      filter: blur(2px);
+      text-shadow: 0 0 10px #00b3ff,
+                   0 0 10px #00b3ff,
+                   0 0 20px #00b3ff,
+                   0 0 40px #00b3ff,
+                   0 0 80px #00b3ff,
+                   0 0 120px #00b3ff,
+                   0 0 200px #00b3ff,
+                   0 0 300px #00b3ff,
+                   0 0 400px #00b3ff;
+  }
+  50% {
+      color: #fff; /* Set to white when half of animation is done */
+      opacity: 1;
+      filter: blur(0px);
+      text-shadow: none;
+  }
+  100% {
+      color: #fff; /* Ensure final state is white */
+      opacity: 1;
+      filter: blur(0px);
+      text-shadow: none;
+  }
+}
+
+
+/*** Background ***/
+.night {
+  background: -webkit-radial-gradient(bottom, rgb(0, 0, 0) 50%, rgb(25, 19, 39)80%, rgb(33, 32, 72));
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+
+
+@keyframes star {
+  0% {
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+  }
+  50% {
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+  }
+}
+
+@keyframes starFeat {
+  0% {
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 1);
+  }
+  20% {
+    background-color: #FFC4C4;
+    box-shadow: 0 0 10px 0px rgb(255, 196, 196, 1);
+  }
+  80% {
+    background-color: #C4CFFF;
+    box-shadow: 0 0 10px 0px rgb(196, 207, 255, 1);
+  }
+  100% {
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.2);
+  }
+}
+
+.constellation {
+  background-attachment: scroll;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  animation: rotate 600s infinite linear;
+
+ 
+}
+
+.constellation-tam1 {
+  width: 1px;
+  height: 1px;
+}
+
+.star {
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  animation-name: star;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  z-index: 9999;
+  opacity: 1;
+}
+
+.style1 {
+  animation-duration: 0.5s;
+  animation-name: star;
+}
+
+.star.style2 {
+  animation-duration: 1.5s;
+  animation-name: star;
+}
+
+.star.style3 {
+  animation-duration: 2s;
+  animation-name: starFeat;
+}
+
+.constellation.tam1 {
+  width: 1px;
+  height: 1px;
+}
+
+.constellation-tam2 {
+  width: 2px;
+  height: 2px;
+}
+div.star.style1.opacity2.tam3{   
+  width:20px;
+  height: 20px;
+  z-index: 9999;
+}
+
+
+.star.tam3 {
+  width: 3px;
+  height: 3px;
+}
+
+.star.opacity1 {
+  opacity: 1;
+}
+
+.star.opacity2 {
+  opacity: .5;
+}
+
+.star.opacity3 {
+  opacity: .1;
+}
+
+@keyframes star {
+  0% {
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+  }
+  50% {
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+  }
+}
+
+@keyframes starFeat {
+  0% {
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 1);
+  }
+  20% {
+    background-color: #FFC4C4;
+    box-shadow: 0 0 10px 0px rgb(255, 196, 196, 1);
+  }
+  80% {
+    background-color: #C4CFFF;
+    box-shadow: 0 0 10px 0px rgb(196, 207, 255, 1);
+  }
+  100% {
+    background-color: #FFFFFF;
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.2);
+  }
+}
