--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -2,6 +2,8 @@
 <div class="home-body">
     <section class="home-section">
         <!-- <img src="../../../assets/images/bg.jpg" alt="bg" id="bg"> -->
+        <div class="night"></div>
+        <div class="constellation"></div>
         <img src="../../../assets/images/moon.png" alt="moon" id="moon">
         <img src="../../../assets/images/mountain.png" alt="mountain" id="mountain">
         <img src="../../../assets/images/road.png" alt="road" id="road">
