--- a/portfolio/src/app/components/home/home.component.scss
+++ b/portfolio/src/app/components/home/home.component.scss
@@ -1,5 +1,6 @@
 .home-body {
-    background: #0a2a43;
+    // background: #0a2a43;
+    background: #373c93;
     min-height: 1500px;
 
 .home-section {
@@ -10,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    mix-blend-mode: luminosity;
+    // mix-blend-mode: luminosity;
     img {
         position: absolute;
         top: 0;
@@ -112,3 +113,154 @@
         text-shadow: none;
     }
 }
+
+
+/*** Background ***/
+.night {
+    background: -webkit-radial-gradient(bottom, rgb(0, 0, 0) 50%, rgb(25, 19, 39)80%, rgb(33, 32, 72));
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+  }
+  
+
+  
+  @keyframes star {
+    0% {
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+    }
+    50% {
+      box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+    }
+    100% {
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+    }
+  }
+  
+  @keyframes starFeat {
+    0% {
+      background-color: #FFFFFF;
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 1);
+    }
+    20% {
+      background-color: #FFC4C4;
+      box-shadow: 0 0 10px 0px rgb(255, 196, 196, 1);
+    }
+    80% {
+      background-color: #C4CFFF;
+      box-shadow: 0 0 10px 0px rgb(196, 207, 255, 1);
+    }
+    100% {
+      background-color: #FFFFFF;
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.2);
+    }
+  }
+  
+  .constellation {
+    background-attachment: scroll;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    animation: rotate 600s infinite linear;
+
+   
+  }
+  
+  .constellation-tam1 {
+    width: 1px;
+    height: 1px;
+  }
+  
+  .star {
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    animation-name: star;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    z-index: 9999;
+    opacity: 1;
+  }
+  
+  .style1 {
+    animation-duration: 0.5s;
+    animation-name: star;
+  }
+  
+  .star.style2 {
+    animation-duration: 1.5s;
+    animation-name: star;
+  }
+  
+  .star.style3 {
+    animation-duration: 2s;
+    animation-name: starFeat;
+  }
+  
+  .constellation.tam1 {
+    width: 1px;
+    height: 1px;
+  }
+  
+  .constellation-tam2 {
+    width: 2px;
+    height: 2px;
+  }
+  div.star.style1.opacity2.tam3{   
+    width:20px;
+    height: 20px;
+    z-index: 9999;
+  }
+
+  
+  .star.tam3 {
+    width: 3px;
+    height: 3px;
+  }
+  
+  .star.opacity1 {
+    opacity: 1;
+  }
+  
+  .star.opacity2 {
+    opacity: .5;
+  }
+  
+  .star.opacity3 {
+    opacity: .1;
+  }
+  
+  @keyframes star {
+    0% {
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+    }
+    50% {
+      box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+    }
+    100% {
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.05);
+    }
+  }
+  
+  @keyframes starFeat {
+    0% {
+      background-color: #FFFFFF;
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 1);
+    }
+    20% {
+      background-color: #FFC4C4;
+      box-shadow: 0 0 10px 0px rgb(255, 196, 196, 1);
+    }
+    80% {
+      background-color: #C4CFFF;
+      box-shadow: 0 0 10px 0px rgb(196, 207, 255, 1);
+    }
+    100% {
+      background-color: #FFFFFF;
+      box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.2);
+    }
+  }
+  
