--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -16,5 +16,8 @@
             <span>m</span>
             <span>e</span>
         </h2>
+        
     </section>
+    <div class="night2"></div>
+        <div class="constellation2"></div>
 </div>
