--- a/portfolio/src/app/components/home/home.component.scss
+++ b/portfolio/src/app/components/home/home.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // mix-blend-mode: luminosity;
+    mix-blend-mode: luminosity;
     img {
         position: absolute;
         top: 0;
@@ -215,6 +215,9 @@
     z-index: 9999;
   }
 
+  .constellation2 {
+    background: black;
+  }
   
   .star.tam3 {
     width: 3px;
