--- a/portfolio/src/app/components/home/home.component.scss
+++ b/portfolio/src/app/components/home/home.component.scss
@@ -2,6 +2,7 @@
     // background: #0a2a43;
     background: #373c93;
     min-height: 1500px;
+    position: relative;
 
 .home-section {
     position: relative;
@@ -23,6 +24,55 @@
         
     }
 }
+}
+
+.overlay-content {
+  position: absolute;
+  top: 100vh;
+  left: 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10; /* Ensure content appears above the night sky */
+  color: white;
+  text-align: center;
+}
+
+.overlay-content section:nth-child(2) {
+  margin-top: 30vh; /* Add margin-top to the second section */
+}
+
+.hidden-home {
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(-100%);
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+
+}
+
+.tech:nth-child(2) {
+  transition-delay: 200ms;
+}
+.tech:nth-child(3) {
+  transition-delay: 400ms;
+}
+.tech:nth-child(4) {
+  transition-delay: 600ms;
+}
+.tech:nth-child(5) {
+  transition-delay: 800ms;
+}
+.tech:nth-child(6) {
+  transition-delay: 1000ms;
 }
 
 .home-section:before {
@@ -80,6 +130,12 @@
         animation-delay: 0.6s;
     }
 
+}
+
+@media(prefers-reduced-motion) {
+  .hidden-home {
+    transition: none;
+  }
 }
 
 #road {
