star overflow fix

--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -31,34 +31,39 @@
             <p>
                 Outside of software development, I am passionate about being active and in particular, enjoying the outdoors and beautiful mountains that are offered to us Vancouverites. You can catch me outdoors hiking, backpacking, star gazing, running, rock climbing, or road biking to destress and enjoy my free time.</p>
         </section>
+
         <section class="hidden-home">
             <h1>Technology</h1>
             <div class="technology-container">
-                <div class="tech">
-                    <div class="tech-hidden">HTML</div>
-                    <div class="tech-hidden">CSS/SCSS</div>
-                    <div class="tech-hidden">Javascript</div>
-                    <div class="tech-hidden">Typescript</div>
-                    <div class="tech-hidden">React</div>
-                    <div class="tech-hidden">NodeJS</div>
+                <div class="row">
+                    <div class="tech">
+                        <div class="tech-hidden">HTML</div>
+                        <div class="tech-hidden">CSS/SCSS</div>
+                        <div class="tech-hidden">Javascript</div>
+                        <div class="tech-hidden">Typescript</div>
+                        <div class="tech-hidden">React</div>
+                        <div class="tech-hidden">NodeJS</div>
+                    </div>
                 </div>
-                <div class="tech">
-                    <div class="tech-hidden">Express</div>
-                    <div class="tech-hidden">MongoDb</div>
-                    <div class="tech-hidden">Git/Github</div>
-                    <div class="tech-hidden">Figma</div>
-                    <div class="tech-hidden">C#</div>
-                    <div class="tech-hidden">Python</div>
+                <div class="row">
+                    <div class="tech">
+                        <div class="tech-hidden">Express</div>
+                        <div class="tech-hidden">MongoDb</div>
+                        <div class="tech-hidden">Git/Github</div>
+                        <div class="tech-hidden">Figma</div>
+                        <div class="tech-hidden">C#</div>
+                        <div class="tech-hidden">Python</div>
+                    </div>
                 </div>
-                <div class="tech">
-                    <div class="tech-hidden">Angular</div>
-                    <div class="tech-hidden">C</div>
-                    <div class="tech-hidden">SQL</div>
-                    <div class="tech-hidden">MVC</div>
-                    <div class="tech-hidden">Android Studio</div>
-                    <div class="tech-hidden">AWS</div>
+                <div class="row">
+                    <div class="tech">
+                        <div class="tech-hidden">Angular</div>
+                        <div class="tech-hidden">C</div>
+                        <div class="tech-hidden">SQL</div>
+                        <div class="tech-hidden">MVC</div>
+                        <div class="tech-hidden">Android Studio</div>
+                        <div class="tech-hidden">AWS</div>
+                    </div>
                 </div>
             </div>
         </section>
-    </div>
-</div>
