--- a/portfolio/src/app/components/home/home.component.scss
+++ b/portfolio/src/app/components/home/home.component.scss
@@ -50,6 +50,7 @@
   transition: all 1s;
   filter: blur(5px);
   transform: translateX(-100%);
+  width: 80%;
 }
 
 .show {
@@ -112,19 +113,19 @@
   opacity:1  
   }
 
-.tech:nth-child(2) {
+  .tech .tech-hidden:nth-child(6) {
   transition-delay: 200ms;
 }
-.tech:nth-child(3) {
+.tech .tech-hidden:nth-child(5) {
   transition-delay: 400ms;
 }
-.tech:nth-child(4) {
+.tech .tech-hidden:nth-child(4) {
   transition-delay: 600ms;
 }
-.tech:nth-child(5) {
+.tech .tech-hidden:nth-child(3) {
   transition-delay: 800ms;
 }
-.tech:nth-child(6) {
+.tech .tech-hidden:nth-child(2) {
   transition-delay: 1000ms;
 }
 
