--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
         <section class="hidden-home">
             <h1>About Me</h1>
             <p>
-                Hello There! My name is Amanda and enjoy learning how things on the web work under the hood, and how to build them myself. I was introduced to software development at my previous job in the mechanical engineering/construction industry, and was pleasantly surprised at how a few lines of well built code can automate tasks that would previously take me hours. From there, I enrolled in the Harvard CS50’s Introduction to Computer Science online course to test the my interest in the subject, ultimately
+                Hello There! My name is Amanda and I enjoy learning how things on the web work under the hood, and how to build them myself. I was introduced to software development at my previous job in the mechanical engineering/construction industry, and was pleasantly surprised at how a few lines of well built code can automate tasks that would have previously taken me hours. From there, I enrolled in the Harvard CS50’s Introduction to Computer Science online course to test the my interest in the subject, ultimately
                 leading to a career change from the mechanical engineering industry to the software development industry.
             </p>
             <p>
