--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -402,3 +402,7 @@ app-root {
     position: absolute;
     top: 0px;
 }
+
+header.scrolled {
+  background: black; /* Adjust gradient for scrolled state */
+}
