nav bar vertical centering

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -404,5 +404,5 @@ app-root {
 }
 
 header.scrolled {
-  background: black; /* Adjust gradient for scrolled state */
+  background: black !important; /* Adjust gradient for scrolled state */
 }
