--- a/portfolio/src/app/app.component.scss
+++ b/portfolio/src/app/app.component.scss
@@ -6,15 +6,22 @@ header {
   background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, .4)); /* Apply gradient background */
   transition: background-color 0.5s ease; /* Add transition for smooth fading effect */
   z-index: 1; /* Ensure the header appears above other content */
+  height: 3rem;
+  nav {
+    height: 100%;
+    top: 50%;
+  }
 
 header.scrolled {
-  background: black; /* Adjust gradient for scrolled state */
+  background: black !important; /* Adjust gradient for scrolled state */
 }
 
   ul {
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     list-style: none;
     padding: 0;
     margin: 0;
