--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -19,17 +19,6 @@ article {
   margin: 10px; /* Add margin between project cards */
 }
 
-#side-nav {
-  position: fixed;
-  top: 30px;
-  right: 0;
-  text-align: right;
-  background-color: #eee;
-  border-radius: 1rem;
-  padding: 1rem;
-  width: 18rem;
-}
-
 
 
 /* Styles for the rest of your layout */
@@ -41,6 +30,22 @@ main {
   align-items: flex-start;
   min-width: 460px;
   width: 100%;
+  #side-nav {
+    margin-right: 1rem;
+    text-align: right;
+    background-color: #eee;
+    border-radius: 1rem;
+    padding: 1rem;
+    align-self: flex-start;
+    width: 10rem;
+    div {
+      cursor: pointer;
+
+      &.active {
+        background-color: #ccc;
+      }
+    }
+  }
 }
 
 #projects {
