--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -11,6 +11,7 @@
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 10px;
   justify-items: center;
+  margin-top: 2.5rem;
 }
 
 
@@ -48,10 +49,6 @@ main {
   }
 }
 
-#projects {
-  width: 100%;
-}
-
 .project-card {
   display: flex;
   flex-direction: column;
@@ -59,21 +56,29 @@ main {
 }
 
 article {
-  width: 60%;
+  width: 80%;
   min-height: 10rem;
   min-width: 15rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgb(220, 219, 218);
-  border-radius: 0.3rem 0.3rem 0 0;
+  border: 1px solid rgba(255,255,255,0.3);
+  background: rgba(255,255,255,0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+  backdrop-filter: blur(5px);
+  transform-style: preserve-3d;
+  transform: perspective(1000px);
+  img {
+    transform: translateZ(20px)
+  }
 }
 
 footer {
   font-size: 0.8rem;
   padding-right: 1rem;
-  align-self: flex-end;
+  align-self: center-end;
 }
 
 a,
