--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,61 +1,64 @@
-<!-- <div class="night"></div>
-<div class="constellation"></div> -->
-<section id="projects">
-  <article
-  class="vanillaTilt" data-tilt
-    *ngFor="let project of projects | projectFilter : tagFilter"
-    [class.hidden]="categoryFilter && project.category?.id != categoryFilter.id"
-    (click)="setSelectedProject(project)"
-  >
-    <a href="/projects/{{ project?.id }}">
-      <section class="project-card">
-        <img
-          *ngIf="project.image"
-          [src]="'assets/images/' + project.image"
-          alt="Image of {{ project.title }}"
-        />
-        <div>
-          <h2>{{ project.title | uppercase }}</h2>
-          <div>{{ project.excerpt }}</div>
+<div class="night"></div>
+<div class="constellation"></div>
+<div class="project-container">
+  <section id="projects">
+    <article
+    class="vanillaTilt" ngTilt
+      *ngFor="let project of projects | projectFilter : tagFilter"
+      [class.hidden]="categoryFilter && project.category?.id != categoryFilter.id"
+      (click)="setSelectedProject(project)"
+    >
+      <a ngTiltParallax [distance]="40" href="/projects/{{ project?.id }}">
+        <section class="project-card">
+          <img
+            *ngIf="project.image"
+            [src]="'assets/images/' + project.image"
+            alt="Image of {{ project.title }}"
+          />
+          <div>
+            <h2>{{ project.title | uppercase }}</h2>
+            <div>{{ project.excerpt }}</div>
+          </div>
+        </section>
+      </a>
+      <footer>
+        <div *ngIf="project.category">
+          Category:
+          <a [href]="'/projects/categories/' + project.category.slug">{{
+            project.category.name
+          }}</a>
         </div>
-      </section>
-    </a>
-    <footer>
-      <div *ngIf="project.category">
-        Category:
-        <a [href]="'/projects/categories/' + project.category.slug">{{
-          project.category.name
-        }}</a>
-      </div>
-      <div *ngIf="project.tags?.length">
-        Tags:
-        <span *ngFor="let tag of project.tags" (click)="setTagFilter(tag)">
-          {{ tag.name }}
-        </span>
-      </div>
-    </footer>
-  </article>
-</section>
-<div class="nav-container">
-  <section id="side-nav">
-    <article *ngIf="categoryFilter || tagFilter">
-      <h2>Filter:</h2>
-      <div class="current-filter">
-        {{ categoryFilter?.name || tagFilter?.name }}
-        <i class="fa fa-trash-o" (click)="clearFilters()"  routerLink="/projects"></i>
-      </div>
-    </article>
-    <article id="categories">
-      <h3>Categories</h3>
-        <div *ngFor="let category of categories" [routerLink]="['/projects/categories', category.slug]" (click)="setCategoryFilter(category)">
-          {{ category.name }}
+        <div *ngIf="project.tags?.length">
+          Tags:
+          <span *ngFor="let tag of project.tags" (click)="setTagFilter(tag)">
+            {{ tag.name }}
+          </span>
         </div>
-    </article>
-    <article id="tags">
-      <h3>Tags</h3>
-        <div *ngFor="let tag of tags" [routerLink]="['/projects/tags', tag.slug]" (click)="setTagFilter(tag)">
-          {{ tag.name }}
-        </div>
+      </footer>
     </article>
   </section>
+  <div class="nav-container">
+    <section id="side-nav">
+      <article *ngIf="categoryFilter || tagFilter">
+        <h2>Filter:</h2>
+        <div class="current-filter">
+          {{ categoryFilter?.name || tagFilter?.name }}
+          <i class="fa fa-trash-o" (click)="clearFilters()"  routerLink="/projects"></i>
+        </div>
+      </article>
+      <article id="categories">
+        <h3>Categories</h3>
+          <div *ngFor="let category of categories" [routerLink]="['/projects/categories', category.slug]" (click)="setCategoryFilter(category)">
+            {{ category.name }}
+          </div>
+      </article>
+      <article id="tags">
+        <h3>Tags</h3>
+          <div *ngFor="let tag of tags" [routerLink]="['/projects/tags', tag.slug]" (click)="setTagFilter(tag)">
+            {{ tag.name }}
+          </div>
+      </article>
+    </section>
+  </div>
+  
 </div>
