--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,9 +1,8 @@
-#projects {
+#project-container {
   display: flex;
-  flex-wrap: wrap; /* Allow projects to wrap if they exceed the container width */
-  justify-content: flex-start; /* Start projects from the left side */
+  flex-direction: column;
+  justify-content: center;
 }
-
 
 #projects {
   width: 100%;
@@ -19,8 +18,6 @@ article {
   width: calc(50% - 20px); /* Adjust the width of each project card */
   margin: 10px; /* Add margin between project cards */
 }
-
-
 
 /* Styles for the rest of your layout */
 main {
@@ -67,12 +64,7 @@ article {
   background: rgba(255,255,255,0.2);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0,0,0,0.1);
-  backdrop-filter: blur(5px);
-  transform-style: preserve-3d;
-  transform: perspective(1000px);
-  img {
-    transform: translateZ(20px)
-  }
+  // backdrop-filter: blur(5px);
 }
 
 footer {
