--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -21,7 +21,7 @@
           </div>
         </section>
       </a>
-      <footer>
+      <footer class="project-selectors">
         <div *ngIf="project.category">
           Category:
           <a [href]="'/projects/categories/' + project.category.slug">{{
