--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -19,9 +19,7 @@
     </section>
     <div class="night2"></div>
     <div class="constellation2"></div>
-    <div class="overlay-content">
-        <!-- Your text and other elements here -->
-        
+    <div class="overlay-content">        
         <section class="hidden-home">
             <h1>About Me</h1>
             <p>
@@ -68,3 +66,4 @@
                 </div>
             </div>
         </section>
+        </div>
