--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: absolute;
+  top: 125vh;
+  left: 0;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  z-index: 10;
+
 }
 
 #projects {
@@ -60,7 +68,7 @@ article {
   width: 80%;
   min-height: 10rem;
   min-width: 15rem;
-  padding: 1rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
