--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,19 +1,38 @@
-#project-container {
+.project-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  // align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 125vh;
+  position: relative;
   left: 0;
   width: 100%;
   height: auto;
-  align-items: center;
-  z-index: 10;
-
 }
 
+.back-video {
+  position: fixed; /* Use fixed positioning to cover the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100%; /* Set width to cover the entire width of the viewport */
+  height: 100%; /* Set height to cover the entire height of the viewport */
+  object-fit: cover; /* Ensure the video covers the entire space while maintaining aspect ratio */
+  z-index: -1; /* Ensure the video is behind other content */
+}
+@media (min-aspect-ratio: 16/9) {
+  .back-video{
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .back-video{
+    width: auto;
+    height: 100%;
+  }
+}
 #projects {
-  width: 100%;
+  width: 80%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 10px;
@@ -36,21 +55,17 @@ main {
   align-items: flex-start;
   min-width: 460px;
   width: 100%;
-  #side-nav {
-    margin-right: 1rem;
-    text-align: right;
-    background-color: #eee;
-    border-radius: 1rem;
-    padding: 1rem;
-    align-self: flex-start;
-    width: 10rem;
-    div {
-      cursor: pointer;
+  
+}
 
-      &.active {
-        background-color: #ccc;
-      }
-    }
+#side-nav {
+  margin-right: 1rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 10rem;
+  color: rgb(180, 180, 180);
+  div {
+    cursor: pointer;
   }
 }
 
@@ -67,7 +82,6 @@ main {
 article {
   width: 80%;
   min-height: 10rem;
-  min-width: 15rem;
   padding: 2rem;
   display: flex;
   flex-direction: column;
