--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -1,6 +1,7 @@
-<div class="night"></div>
-<div class="constellation"></div>
 <div class="project-container">
+  <video autoplay loop muted plays-inline class="back-video">
+    <source src="../../../assets/videos/StarsBackground.mp4" type="video/mp4">
+  </video>
   <section id="projects">
     <article
     class="vanillaTilt" ngTilt
