--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -6,7 +6,6 @@
     <article
     class="vanillaTilt" ngTilt
       *ngFor="let project of projects | projectFilter : tagFilter"
-      [class.hidden]="categoryFilter && project.category?.id != categoryFilter.id"
       (click)="setSelectedProject(project)"
     >
       <a ngTiltParallax [distance]="40" href="/projects/{{ project?.id }}">
@@ -40,22 +39,22 @@
   </section>
   <div class="nav-container">
     <section id="side-nav">
-      <article *ngIf="categoryFilter || tagFilter">
+      <article *ngIf="filterString">
         <h2>Filter:</h2>
         <div class="current-filter">
-          {{ categoryFilter?.name || tagFilter?.name }}
+          {{ filterString }}
           <i class="fa fa-trash-o" (click)="clearFilters()"  routerLink="/projects"></i>
         </div>
       </article>
       <article id="categories">
         <h3>Categories</h3>
-          <div *ngFor="let category of categories" [routerLink]="['/projects/categories', category.slug]" (click)="setCategoryFilter(category)">
+          <div *ngFor="let category of categories" [routerLink]="['/projects/categories', category.slug]">
             {{ category.name }}
           </div>
       </article>
       <article id="tags">
         <h3>Tags</h3>
-          <div *ngFor="let tag of tags" [routerLink]="['/projects/tags', tag.slug]" (click)="setTagFilter(tag)">
+          <div *ngFor="let tag of tags" [routerLink]="['/projects/tags', tag.slug]" >
             {{ tag.name }}
           </div>
       </article>
