back button debugging

--- a/portfolio/src/app/components/project/project.component.scss
+++ b/portfolio/src/app/components/project/project.component.scss
@@ -3,10 +3,8 @@ img {
   height: auto;
 }
 
-.minifig-card {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
+.project-container {
+  margin-top: 3rem;
 }
 
 article {
