project page edits

--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -23,9 +23,10 @@
         <section class="hidden-home">
             <h1>About Me</h1>
             <p>
-                Hello There! My name is Amanda and I enjoy learning how things on the web work under the hood, and how to build them myself. I was introduced to software development at my previous job in the mechanical engineering/construction industry, and was pleasantly surprised at how a few lines of well built code can automate tasks that would have previously taken me hours. From there, I enrolled in the Harvard CS50’s Introduction to Computer Science online course to test the my interest in the subject, ultimately
-                leading to a career change from the mechanical engineering industry to the software development industry.
+                Hello There! My name is Amanda and I enjoy learning how things on the web work under the hood, and how to build them myself. I was introduced to software development at my previous job in the mechanical engineering/construction industry, and was pleasantly surprised at how a few lines of well built code can automate tasks that would have previously taken me hours. 
             </p>
+            <p>From there, I enrolled in the Harvard CS50’s Introduction to Computer Science online course to test the my interest in the subject, ultimately
+                leading to a career change from the mechanical engineering industry to the software development industry.</p>
             <p>
                 Outside of software development, I am passionate about being active and in particular, enjoying the outdoors and beautiful mountains that are offered to us Vancouverites. You can catch me outdoors hiking, backpacking, star gazing, running, rock climbing, or road biking to destress and enjoy my free time.</p>
         </section>
