--- a/portfolio/src/app/components/project/project.component.html
+++ b/portfolio/src/app/components/project/project.component.html
@@ -1,5 +1,8 @@
 <article class="project-container">
-  <header>
+  <video autoplay loop muted plays-inline class="back-video">
+    <source src="../../../assets/videos/StarsBackground.mp4" type="video/mp4">
+  </video>
+  <header class="back-button">
     <button type="button" (click)="goBack()">Back</button>
   </header>
   <section class="project-card">
