project page styling

--- a/portfolio/src/app/components/project/project.component.html
+++ b/portfolio/src/app/components/project/project.component.html
@@ -17,7 +17,7 @@
       <div [innerHTML]="project.body">{{project.body }}</div>
     </div>
   </section>
-  <footer>
+  <!-- <footer>
     <div *ngIf="project.category">
       Category: <span>{{project.category.name }}</span>
     </div>
@@ -27,5 +27,5 @@
         {{ tag.name }}
       </span>
     </div>
-  </footer>
+  </footer> -->
 </article>
