--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -26,6 +26,9 @@
   <router-outlet></router-outlet>
 </main>
 <footer>
+  <div>
+    <i class="fa fa-brands fa-linkedin-square" target="_blank"></i>
+  </div>
   <div class="page-links">
     <a
     routerLink="/"
